--- a/templates/port.html
+++ b/templates/port.html
@@ -189,7 +189,7 @@
         <p>
           A responsive food-ordering site where users can browse Veg/Non-Veg menus, place orders, and make payments.
         </p><br>
-        <center><a href="#" class="project-btn">See Now</a></center>
+        <center><a href="https://github.com/nelakurthivaralakshmi03/wtpro1" class="project-btn">See Now</a></center>
       </div>
     </div>
   
@@ -200,7 +200,7 @@
         <p>
           A fun and fast-paced quiz platform to build aptitude and problem-solving speed with interactive challenges.
         </p><br>
-        <center> <a href="#" class="project-btn">See Now</a></center>
+        <center> <a href="https://aqr.onrender.com/" class="project-btn">See Now</a></center>
       </div>
     </div>
   </div>
@@ -218,7 +218,6 @@
           <p><strong>Email:</strong> <a href="nelakurthivaralakshmi.com">nelakurthivaralakshmi@gmail.com</a></p>
           <p><strong>Phone:</strong> +91-7620278523</p>
           <p><strong>Location:</strong> Visakhapatnam, India</p>
-          <p><strong>Resume:</strong> <a href="{{ url_for('static', filename='images/varalakshmi.pdf') }}" download>Download PDF</a></p>
       </div>
   </div>
   
